# tic-tac-toe-ai

./: .gitignore  optimal_policy_size_3_-1  optimal_policy_size_3_1  pyproject.toml
tests/: test_tic_tac_toe_ai.py
tic_tac_toe_ai/: __init__.py  board_state.py  context.py  judger.py  player.py  tic-tac-toe.py
