[tool.poetry]
name = "tic-tac-toe-ai"
version = "0.1.0"
description = ""
authors = ["Gabriel Frantz, Victor Wolmeister"]

[tool.poetry.scripts]
run = "tic_tac_toe_ai.tic-tac-toe:start"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
